取消文字顯示特效

--- a/openCVTutorial1CameraPreview/src/main/res/values-zh-rCN/strings.xml
+++ b/openCVTutorial1CameraPreview/src/main/res/values-zh-rCN/strings.xml
@@ -24,7 +24,7 @@
     <string name="summer_street_des">全幅多用墨绿\n暗调子，使得\n朴素的房舍仿\n佛笼罩在金黄\n色调中，典雅\n而辉煌。</string>
 
     <string name="chengpo_title">庙口</string>
-    <string name="chengpo_des">寺庙建筑鲜艳的红黑色与天空的湛蓝色对比，以及尖翘飞扬的弧形殿脊，表现出寺庙建筑的壮丽与喧闹气氛。</string>
+    <string name="chengpo_des">寺庙建筑鲜\n艳的红黑色\n与天空的湛\n蓝色对比，\n以及尖翘飞\n扬的弧形殿\n脊，表现出\n寺庙建筑的\n壮丽与喧闹气氛。</string>
 
     <string name="clean_title">清流</string>
     <string name="clean_des">生动的线条，与充满寓意的空间表现，使整个画面显现出独特的吸引力</string>
