--- a/openCVTutorial1CameraPreview/src/main/res/values-zh-rTW/strings.xml
+++ b/openCVTutorial1CameraPreview/src/main/res/values-zh-rTW/strings.xml
@@ -24,7 +24,7 @@
     <string name="summer_street_des">全幅多用墨綠\n暗調子，使得\n樸素的房舍彷\n彿籠罩在金黃\n色調中，典雅\n而輝煌。</string>
 
     <string name="chengpo_title">廟口</string>
-    <string name="chengpo_des">寺廟建築鮮艷的紅黑色與天空的湛藍色對比，以及尖翹飛揚的弧形殿脊，表現出寺廟建築的壯麗與喧鬧氣氛。</string>
+    <string name="chengpo_des">寺廟建築鮮\n艷的紅黑色\n與天空的湛\n藍色對比，\n以及尖翹飛揚的\n弧形殿脊，表\n現出寺廟建\n築的壯麗與\n喧鬧氣氛。</string>
 
     <string name="clean_title">清流</string>
     <string name="clean_des">生動的線條，與充滿寓意的空間表現，使整個畫面顯現出獨特的吸引力。</string>
